# TwitchPlays

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
.github/workflows/: build.yml  cache-clear.yml  pr.yml  release.yml
scripts/: TwitchPlays_TEMPLATE.py
src/: main.rs
src/components/: mod.rs
ui/: index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
ui/src/: App.css  App.tsx
ui/src/components/: Footer.tsx  Message.tsx
